# iris

./: .gitignore  .rustfmt.toml  Cargo.toml  config.example.toml  update.sh
config/: iris.service  nginx.conf
src/: config.rs  docs.rs  logger.rs  main.rs  utils.rs
src/api/: abzar.rs  mod.rs
src/models/: common.rs  error.rs  mod.rs
static/: rapidoc.js
