[package]
name = "iris"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
utoipa = { version = "5.4.0", features = ["actix_extras", "debug"] }
actix-web = "4.11.0"
actix-files = "0.6.8"
actix-multipart = "0.7.2"
tokio = { version = "1.47.1", features = ["full"] }
serde = "1.0.228"
toml = "0.9.7"
serde_json = "1.0.145"

[dependencies.reqwest]
version = "0.12.23"
default-features = false
features = [
    "socks",
    "rustls-tls",
    "charset",
    "http2",
    "json",
    "multipart",
    "stream",
]
